<resources>
    <string name="app_name">Pookraidee</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="title_profile" translatable="false">Profile</string>
<!--  login  -->
    <string name="login">เข้าสู่ระบบ</string>
    <string name="phone_number">เบอร์โทรศัพท์</string>
    <string name="password">รหัสผ่าน</string>
    <string name="create_accout">สร้างบัญชี</string>
    <string name="forgot_password">ลืมรหัสผ่าน ?</string>
<!--   regis  -->
    <string name="register">ลงทะเบียน</string>
    <string name="regis_profile">ข้อมูลส่วนตัว</string>
    <string name="regis_firstname">ชื่อ...</string>
    <string name="regis_lastname">นามสกุล...</string>
    <string name="regis_age">อายุ</string>
    <string name="regis_area">พื้นที่...</string>
    <string name="regis_address">ที่อยู่...</string>
    <string name="button_regis">สมัครสมาชิก</string>
<!--   Home2 -->
    <string name="home_profile">ข้อมูลผู้ใช้</string>
    <string name="home_puklaidee">ปลูกอะไรดี</string>
    <string name="home_history">ประวัติการปลูก</string>
    <string name="home_dividend">เงินปันผล</string>
    <string name="home_news">ข่าวสาร</string>
    <string name="home_planting">พืชที่กำลังปลูก</string>
<!--   Profile -->
    <string name="profile_myprofile">ข้อมูลสมาชิก</string>
    <string name="profile_fullname">ชื่อ-นามสกุล :</string>
    <string name="profile_age">อายุ :</string>
    <string name="profile_phone_number">เบอร์โทรศัพท์ :</string>
    <string name="profile_area">พื้นที่ :</string>
    <string name="profile_address">ที่อยู่ :</string>
    <string name="profile_edit">แก้ไข</string>
<!--   Edit -->
    <string name="edit_profile">แก้ไขข้อมูลส่วนตัว</string>
    <string name="edit_myprofile">ข้อมูลส่วนตัว</string>
    <string name="edit_save">บันทึก</string>
    <string name="edit_cancle">ยกเลิก</string>
    <string name="edit_fname">ชื่อ...</string>
    <string name="edit_lname">นามสกุล...</string>
    <string name="edit_phon">เบอร์โทรศัพท์...</string>
    <string name="edit_area">พื้นที่...</string>
    <string name="edit_address">ที่อยู่...</string>
<!--   Tree Show -->
    <string name="stree_top">พืชที่ควรปลูก</string>
    <string name="stree_name">ชื่อพืช</string>
    <string name="stree_sunshine">แดด</string>
    <string name="stree_moist">ชื้น</string>
    <string name="stree_ph">ph</string>
    <string name="stree_price">ราคา</string>
    <string name="stree_start">เริ่มปลูก</string>
    <string name="stree_more">ข้อมูลเพิ่มเติม</string>
<!--   Tree follow  -->
    <string name="stree_your_planting">พืชที่คุณกำลังปลูก</string>
    <string name="stree_percent">เปอร์เซ็นในการเจริญเติบโต</string>
    <string name="stree_adjustment">การแก้ไข</string>
    <string name="stree_how_to_adjustment">วิธีแก้ไข</string>
<!--   History -->
    <string name="history_top">ประวัติการปลูก</string>
    <string name="history_plant_start">วันที่เริ่มปลูก:</string>
    <string name="history_plant_stop">วันที่สิ้นสุดการปลูก:</string>
    <string name="history_Vegetables_grown">ผักที่ปลูก:</string>
    <string name="history_weight">น้ำหนัก:</string>
    <string name="history_revenue">รายได้:</string>
<!--   Item dividend -->
    <string name="dividend_dividend">เงินปันผล</string>
    <string name="dividend_date">จ่ายวันที่</string>
    <string name="Dividend_Information">ข้อมูลเงินปันผล</string>
<!--   how to plant  -->
    <!--   Item dividend -->
    <string name="howtoplant">วิธีการปลูก</string>
    <string name="product">ผลผลิต</string>
    <string name="be_break_even">ความคุ้มค่า</string>


</resources>
