<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp">
    <com.jetradarmobile.snowfall.SnowfallView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:snowflakeAlphaMax="250"
        app:snowflakeAlphaMin="150"
        app:snowflakeAngleMax="5"
        app:snowflakesAlreadyFalling="false"
        app:snowflakesFadingEnabled="true"
        app:snowflakeSizeMax="32dp"
        app:snowflakeSizeMin="16dp"
        app:snowflakeSpeedMax="5"
        app:snowflakeSpeedMin="1"
        app:snowflakesNum="10"
        />
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/reg_load"
    >
    <com.github.ybq.android.spinkit.SpinKitView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/spin_kit_reg"
        style="@style/SpinKitView.Large.ChasingDots"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_centerInParent="true"
        app:SpinKit_Color="#33CC33" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="กรุณารอสักครู..."
        android:layout_below="@+id/spin_kit_reg"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:textSize="25dp"
        android:textColor="#685d5d"
        />
</RelativeLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/reg_form"
    tools:context=".Register">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:textSize="25dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#685d5d"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        />

        <ImageView
            android:id="@+id/reg_avatar"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/facebookavatar"
            android:layout_marginTop="20dp"
            android:clickable="true"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/regis_profile"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:layout_marginLeft="20dp"
            />
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
        <EditText
            android:id="@+id/reg_name_et"
            style="@style/Font_family_light"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:drawableStart="@drawable/names"
            android:background="@drawable/edit_style"
            android:drawablePadding="@dimen/padding_16"
            android:layout_marginTop="@dimen/margin_top_8"
            android:layout_marginBottom="@dimen/margin_top_8"
            android:layout_marginLeft="@dimen/margin_right_16"
            android:layout_marginRight="@dimen/margin_right_16"
            android:inputType="text"
            android:maxLength="30"
            android:maxLines="1"
            android:hint="@string/regis_firstname"
            android:padding="@dimen/padding_16"
            android:textColor="#685d5d"
            android:textColorHint="#685d5d"
            android:textSize="14dp" />
                <EditText
                    android:id="@+id/reg_Sname_et"
                    style="@style/Font_family_light"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:drawableStart="@drawable/names"
                    android:background="@drawable/edit_style"
                    android:drawablePadding="@dimen/padding_16"
                    android:layout_marginTop="@dimen/margin_top_8"
                    android:layout_marginBottom="@dimen/margin_top_8"
                    android:layout_marginLeft="@dimen/margin_right_16"
                    android:layout_marginRight="@dimen/margin_right_16"
                    android:inputType="text"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:hint="@string/regis_lastname"
                    android:padding="@dimen/padding_16"
                    android:textColor="#685d5d"
                    android:textColorHint="#685d5d"
                    android:textSize="14dp" />
        <EditText
            android:id="@+id/reg_username_et"
            style="@style/Font_family_light"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/edit_style"
            android:drawableLeft="@drawable/ic_person"
            android:drawablePadding="@dimen/padding_16"
            android:layout_marginTop="@dimen/margin_top_8"
            android:layout_marginBottom="@dimen/margin_top_8"
            android:layout_marginLeft="@dimen/margin_right_16"
            android:layout_marginRight="@dimen/margin_right_16"
            android:inputType="text"
            android:maxLength="30"
            android:hint="@string/phone_number"
            android:maxLines="1"
            android:padding="@dimen/padding_16"
            android:textColor="#685d5d"
            android:textColorHint="#685d5d"
            android:textSize="14dp" />
        <EditText
            android:id="@+id/reg_password_et"
            style="@style/Font_family_light"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="@dimen/padding_16"
            android:background="@drawable/edit_style"
            android:hint="@string/password"
            android:layout_marginTop="@dimen/margin_top_8"
            android:layout_marginBottom="@dimen/margin_top_8"
            android:layout_marginLeft="@dimen/margin_right_16"
            android:layout_marginRight="@dimen/margin_right_16"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="@dimen/padding_16"
            android:textColor="#685d5d"
            android:textColorHint="#685d5d"
            android:textSize="14dp" />
                <EditText
                    android:id="@+id/reg_yearold_et"
                    style="@style/Font_family_light"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="@dimen/padding_16"
                    android:background="@drawable/edit_style"
                    android:hint="@string/regis_age"
                    android:layout_marginTop="@dimen/margin_top_8"
                    android:layout_marginBottom="@dimen/margin_top_8"
                    android:layout_marginLeft="@dimen/margin_right_16"
                    android:layout_marginRight="@dimen/margin_right_16"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="@dimen/padding_16"
                    android:textColor="#685d5d"
                    android:textColorHint="#685d5d"
                    android:textSize="14dp" />
                <EditText
                    android:id="@+id/reg_area_et"
                    style="@style/Font_family_light"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="@dimen/padding_16"
                    android:background="@drawable/edit_style"
                    android:hint="@string/regis_area"
                    android:layout_marginTop="@dimen/margin_top_8"
                    android:layout_marginBottom="@dimen/margin_top_8"
                    android:layout_marginLeft="@dimen/margin_right_16"
                    android:layout_marginRight="@dimen/margin_right_16"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="@dimen/padding_16"
                    android:textColor="#685d5d"
                    android:textColorHint="#685d5d"
                    android:textSize="14dp" />
                <EditText
                    android:id="@+id/reg_address_et"
                    style="@style/Font_family_light"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="@dimen/padding_16"
                    android:background="@drawable/edit_style"
                    android:hint="@string/regis_address"
                    android:layout_marginTop="@dimen/margin_top_8"
                    android:layout_marginBottom="@dimen/margin_top_8"
                    android:layout_marginLeft="@dimen/margin_right_16"
                    android:layout_marginRight="@dimen/margin_right_16"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="@dimen/padding_16"
                    android:textColor="#685d5d"
                    android:textColorHint="#685d5d"
                    android:textSize="14dp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <Button
            android:id="@+id/register_naja"
            style="@style/Font_family_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_8"
            android:layout_marginBottom="@dimen/margin_top_8"
            android:layout_marginLeft="@dimen/margin_right_16"
            android:layout_marginRight="@dimen/margin_right_16"
            android:background="@drawable/red_style"
            android:text="@string/button_regis"
            android:textColor="@color/white"
            android:textSize="@dimen/text_20" />

    </LinearLayout><![CDATA[


]]></RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.v7.widget.CardView>